    * Fixed various instances of missing or unnecessary minor tags on missions. (@Amazinite, @Anarchist2)
    * Governments now have the same attitude toward the " Hai " government as they do the "Hai" government. (@NomadicVolcano)
    * No longer able to ask the Remnant about the Ka'het before having passed the blood test. (@beccabunny)
    * Max depreciation age now accounts for the 7 day grace period. (@Amazinite)
    * The Wanderer outfit license is now granted when you return to Wanderer space instead of while in Hai space. (@Amazinite)
    * The number of drone and fighter bays is now properly displayed in the ship info when in flight. (@tehhowch)
    * The pop-up dialog when launching with ships that can not leave the system will now always refer to the correct number of ships. (@tehhowch)
    * Fixed various cases where the map would improperly display whether a mission's objectives were satisfied. (@tehhowch)
    * Afterburner and other visual effects are no longer drawn "shifted" by their velocity. (@tehhowch)
    * Fixed a possible crash on startup caused by unsupported VSync settings. (@tehhowch)
    * Restored the visual alert for fatal errors that occur during startup. (@tehhowch)
  * Game content:
    * New content:
      * New variant of the mystery deliver jobs that has unique dialog for station destinations. (@Anarchist2)
      * Remnant ships now have unique leak effects. (@Zitchas)
      * New missions in Hai space where the player helps a Hai captain who has just bought her first ship. (@Arachi-Lover, @Janaszar)
      * Added a new person ship. (@Zitchas, @beccabunny)
      * Added a new, extremely rare and valuable minable asteroid. (@Arachi-Lover, @beccabunny)
      * There are now more large passenger jobs in human space to balance out with the abundance of large cargo jobs. (@MasterOfGrey)
      * Added new Remnant outfits, an afterburner and a turret, to be used in future missions. (@Zitchas, @beccabunny)