@@ -38,6 +38,25 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="0.9.12" date="2020-04-22">
+      <description>
+        <p>This is a stable release focusing on bug fixes and polishing the recent v0.9.11 release.</p>
+        <p>Changes include:</p>
+        <ul>
+          <li>Buying and selling items at maximum depreciation now accounts for the 7-day grace period.</li>
+          <li>Missions will no longer complete if a required passenger isn’t landed with you.</li>
+          <li>Several new star images have been added, as well as additional jobs for players with many bunks.</li>
+          <li>Tweaks to the balance of solar panels and some Coalition outfits, and to the fleets found in Hai space.</li>
+        </ul>
+        <p>Plugin authors and content creators have some small engine updates to consider:</p>
+        <ul>
+          <li>Automatic condition variables now update daily, and not just upon landing.</li>
+          <li>The flagship’s system and planet are available as condition variables.</li>
+          <li>Heat can be added to a ship based on the system’s solar power output with the “solar heat” outfit attribute.</li>
+        </ul>
+      </description>
+      <url>https://github.com/endless-sky/endless-sky/blob/v0.9.12/changelog</url>
+    </release>
     <release version="0.9.11" date="2020-02-24" type="development" urgency="low">
       <description>
         <p>This is an unstable release, containing big changes that may introduce new bugs.</p>
